5003 - top dropdowns z-index fixes

--- a/css/style.css
+++ b/css/style.css
@@ -10201,7 +10201,7 @@ filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20);
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    z-index: 1110;
+    z-index: 1120;
     padding: 4px 0;
     min-height: 40px;
     top: 48px;
